# swarm-news-collector

./: .env.example  .gitignore  LICENSE  README.md  prompts.md  pyproject.toml
prompts/: 01_create_news_reader.md  02_create_file_writer.md
src/news_reader/: agent.py  file_writer.py
